--- a/andi_carlson.Rmd
+++ b/andi_carlson.Rmd
@@ -29,6 +29,12 @@ knitr::include_graphics("https://www.ers.usda.gov/media/8953/andrea-carlson-web.
 <br>
 [DIFA Workshop Presentation](https://www.youtube.com/watch?v=-_zdr6SRAQU)
 <br>
+```{r echo=FALSE}
+xfun::pkg_load2(c("htmltools", "mime"))
+xfun::embed_file('Carlson_DIFA21.pdf', text='Presentation Slides')
+
+```
+<br>
 <br>
 [More Information Here](https://www.ers.usda.gov/authors/ers-staff-directory/andrea-carlson/)
   
