--- a/ayaz_hyder.Rmd
+++ b/ayaz_hyder.Rmd
@@ -29,6 +29,12 @@ Some of his publications include *COVID-19 Surveillance for Local Decision Makin
 <br>
 [DIFA Workshop Presentation](https://www.youtube.com/watch?v=bPcZ-QW78Pw)
 <br>
+```{r echo=FALSE}
+xfun::pkg_load2(c("htmltools", "mime"))
+xfun::embed_file('Hyder_DIFA21.pdf', text='Presentation Slides')
+
+```
+<br>
 <br>
 [More Information Here](https://cph.osu.edu/people/ahyder)
   
