--- a/lauren_chenarides.Rmd
+++ b/lauren_chenarides.Rmd
@@ -26,6 +26,15 @@ knitr::include_graphics("https://wpcarey.asu.edu/sites/default/files/styles/asu_
 **Dr. Lauren Chenarides** is an Assistant Professor in the Morrison School of Agribusiness in the W. P. Carey Business School at Arizona State University. Dr. Chenarides has extensive experience in working with secondary, high-dimensional data sets to examine market structure, food access, and policy-oriented research questions. Her recent work has been published in Food Policy and Applied Economic Perspectives and Policy. 
 <br>
 <br>
+[DIFA Workshop Presentation](https://www.youtube.com/watch?v=_yIWVTy-72k)
+<br>
+```{r echo=FALSE}
+xfun::pkg_load2(c("htmltools", "mime"))
+xfun::embed_file('Chenarides_DIFA21.pdf', text='Presentation Slides')
+
+```
+<br>
+<br>
 [More Information Here](https://wpcarey.asu.edu/people/profile/3153292)
   
 <br>
